spring boot bodyAdvice and some configuration