@@ -1,7 +1,6 @@
 package cn.nihility.boot.jwt;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 import java.security.Key;
 import java.security.KeyPair;
@@ -56,12 +55,12 @@ public class SecretKeyUtils {
 
     // 解码返回byte
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.decodeBase64(key);
     }
 
     // 编码返回字符串
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.encodeBase64String(key);
     }
 
     // 使用KeyPairGenerator 生成公私钥，存放于map对象中
